Deployment/pwn-fmt1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pwn-fmt2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: pwn-fmt2
  template:
    metadata:
      labels:
        app: pwn-fmt2
    spec:
      containers:
        - name: oracle
          image: keanekwa/repctf:pwn-fmt2
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: pwn-fmt2
spec:
  type: ClusterIP
  selector:
    app: pwn-fmt2
  ports:
    - protocol: TCP
      name: pwn-fmt1
      port: 1347
      targetPort: 5000
      protocol: TCP
