Deployment/web-careless-mistake.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-careless-mistake
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-careless-mistake
  template:
    metadata:
      labels:
        app: web-careless-mistake
    spec:
      enableServiceLinks: false
      automountServiceAccountToken: false
      containers:
        - name: web-careless-mistake
          image: keanekwa/repctf:web-careless-mistake
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: web-careless-mistake
spec:
  type: ClusterIP
  selector:
    app: web-careless-mistake
  ports:
    - port: 80
      targetPort: 3000
