Deployment/web-jelly1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-jelly1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web-jelly1
  template:
    metadata:
      labels:
        app: web-jelly1
    spec:
      enableServiceLinks: false
      automountServiceAccountToken: false
      containers:
        - name: web-jelly1
          image: keanekwa/repctf:web-jelly1-v4
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: web-jelly1
spec:
  type: ClusterIP
  selector:
    app: web-jelly1
  ports:
    - port: 80
      targetPort: 3000
